--- a/contatos.html
+++ b/contatos.html
@@ -29,14 +29,14 @@
   </section>
 
   <section class="container" style="padding:3rem; text-align:center;">
-    <p><i class="fas fa-envelope"></i> gustavo.barca@exemplo.com</p>
-    <p><i class="fas fa-phone"></i> (41) 99999-9999</p>
-    <p><i class="fas fa-map-marker-alt"></i> Curitiba, PR</p>
+    <p><i class="fas fa-envelope"></i> gustavomiranda@colegiopaulode.com.br</p>
+    <p><i class="fas fa-map-marker-alt"></i> Sao Paulo, SP</p>
+    <li>GitHub: <a href="https://github.com/gustamiranda00" target="_blank">github.com/gustamiranda00</a></li>
   </section>
 
   <footer>
     <div class="container">
-      <p>&copy; 2023 Gustavo Miranda Barca. Todos os direitos reservados.</p>
+      <p>&copy; 2025 Gustavo Miranda Barca. Todos os direitos reservados.</p>
     </div>
   </footer>
 </body>
