--- a/projetos.html
+++ b/projetos.html
@@ -33,13 +33,13 @@
     <ul>
       <li>Site Portfólio Pessoal</li>
       <li>Pequenas aplicações com JavaScript</li>
-      <li>Projetos escolares de programação</li>
+    <img src="imagens/lego.png" alt="lego" class="lego"> <li>Projetos escolares de programação como o lego first </li>
     </ul>
   </section>
 
   <footer>
     <div class="container">
-      <p>&copy; 2023 Gustavo Miranda Barca. Todos os direitos reservados.</p>
+      <p>&copy; 2025 Gustavo Miranda Barca. Todos os direitos reservados.</p>
     </div>
   </footer>
 </body>
