--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gustavo Miranda Barca - Portfólio</title>
+  <title> <img src="imagens/avatar.png" alt="Minha foto ou avatar" class="avatar">Gustavo Miranda Barca - Portfólio</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -39,7 +39,7 @@
         <a href="#"><i class="fab fa-linkedin"></i></a>
         <a href="#"><i class="fab fa-instagram"></i></a>
       </div>
-      <p>&copy; 2023 Gustavo Miranda Barca. Todos os direitos reservados.</p>
+      <p>&copy; 2025 Gustavo Miranda Barca. Todos os direitos reservados.</p>
     </div>
   </footer>
 </body>
