--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> <img src="imagens/avatar.png" alt="Minha foto ou avatar" class="avatar">Gustavo Miranda Barca - Portfólio</title>
+  <img src="imagens/avatar.png" alt="Minha foto ou avatar" class="avatar">
+  <title> Gustavo Miranda Barca - Portfólio</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
