--- a/curriculo.html
+++ b/curriculo.html
@@ -11,7 +11,7 @@
   <header>
     <div class="container">
       <nav>
-        <a href="index.html" class="logo">GustavoBarca</a>
+        <a href="index.html" class="logo">GustavoMiranda</a>
         <ul class="nav-links">
           <li><a href="curriculo.html">Currículo</a></li>
           <li><a href="projetos.html">Projetos</a></li>
@@ -35,7 +35,7 @@
     <h2>Cursos</h2>
     <ul>
       <li>HTML, CSS e JavaScript</li>
-      <li>Noções de Design UX/UI</li>
+      <li>Pequenos aprendizados em Python </li>
     </ul>
   </section>
 
