--- a/contatos.html
+++ b/contatos.html
@@ -29,9 +29,10 @@
   </section>
 
   <section class="container" style="padding:3rem; text-align:center;">
-    <p><i class="fas fa-envelope"></i> gustavomiranda@colegiopaulode.com.br</p>
+    <p><i class="fas fa-envelope"></i> gustavomiranda@colegiopaulodetarso.com.br</p>
     <p><i class="fas fa-map-marker-alt"></i> Sao Paulo, SP</p>
     <li>GitHub: <a href="https://github.com/gustamiranda00" target="_blank">github.com/gustamiranda00</a></li>
+     <a href="https://instagram.com/gustamirandaa" target="_blank"></a>
   </section>
 
   <footer>
