--- a/curriculo.html
+++ b/curriculo.html
@@ -34,7 +34,10 @@
 
     <h2>Cursos</h2>
     <ul>
-      <li>HTML, CSS e JavaScript</li>
+        <li>Programação Web (HTML, CSS, JavaScript)</li>
+                    <li>Lógica de Programação e Algoritmos</li>
+                    <li>Banco de Dados (SQL e modelagem)</li>
+                    <li>Engenharia de Software (metodologias ágeis)</li>
       <li>Pequenos aprendizados em Python </li>
     </ul>
   </section>
